--- a/css/sojeong.css
+++ b/css/sojeong.css
@@ -1,9 +1,31 @@
-@import url('http://sj926thwjdk.cafe24.com/coway/theme/ety_theme_company/css/font_face.css');
+@import url('//sj926thwjdk.cafe24.com/coway/theme/ety_theme_company/css/font_face.css');
 
 * {font-family: 'S-CoreDream-3Light',sans-serif;font-size:16px;}
-@media (min-width:992px) {
-  * .container {max-width:1310px}
+body {background-color:#f9f9f9}
+
+@media (max-width:991px) {
+  .navbar .container .logo-box {padding:0!important; background-color:unset!important;}
+  .scroll .container .logo .scroll_down {display: block;width: 120px;margin-top: -10px;}
+  .xi-bars:before {content: "\e91c";  color:#fff}
+  .scroll .xi-bars:before {content: "\e91c"; color:#222}
+  .scroll_up_m {display:block; width:120px;}
+  .scroll .scroll_up_d,.scroll_up_d {display:none;}
+  .scroll .scroll_up_m {display:none;}
+  .left:after {display:none;}
+  .mainSliderItme {background-image:url();}
 }
+
+
+.collapse.in{
+    -webkit-transition-delay: 4s;
+    transition-delay: 5s;
+    visibility: visible;
+}
+
+
+/* 슬라이드 이미지 */
+
+
 
 /* 폰트 */
 .font_s {font-family: 'S-CoreDream-3Light',sans-serif;}
@@ -11,6 +33,10 @@
 
 /* 모바일  */
 .mobile_ver {display:none;}
+
+/* 팝업 */
+.evt {display: block; width: 185px; height: 40px; position: relative; top: -105px; left: 256px; outline:none}
+.review {display: block; width: 185px; height: 40px; position: relative; top: -146px; left: 56px; outline:none }
 
 /* quick */
 .scroll #quick {
@@ -44,7 +70,7 @@ border:1px solid #222; }
 
 
 /* nav - 메뉴 */
-.navbar {padding: 0;} /* navbar 위쪽 패딩 없애기 */
+.navbar {padding-top: 0px;} /* navbar 위쪽 패딩 없애기 */
 .navbar .nav-link {color:#fff; font-size:1.1rem}
 .navbar .dropdown-toggle::after {display:none}
 .navbar .navbar-expand-lg .navbar-nav .nav-link {padding-right:0;padding-left:0;} /* scss로 되어 있는 기본 스타일 값 덮어쓰기 */
@@ -55,7 +81,7 @@ border:1px solid #222; }
 
 .navbar .container .logo .scroll_up {width:150px;padding-top:25px;}
 .navbar .container .logo .scroll_down {display:none;}
-.navbar .container .logo-box {padding:15px 20px 30px; background-color:#00a3e0}
+.navbar .container .logo-box {padding:25px 20px 30px; background-color:#00a3e0}
 
 .navbar #loginDiv ul {margin-bottom: 0;}
 .navbar #loginDiv .xi-user:before {content: "\e9f3"; color: #fff;padding-left:3px;}
@@ -78,7 +104,7 @@ border:1px solid #222; }
 .newBox {background-color:#f3f3f3}
 .newBox .container {max-width:1467px; padding:115px 0}
 .newBox .products .imgBox {position:relative; display:inline-block; width:450px; height:560px}
-.newBox .mattress,.newBox .allInOne {margin-right:132px;}
+/* .newBox .mattress,.newBox .allInOne {margin-right:132px;} */
 .newBox h2::before {content: ''; display:block; width:1px; height:30px; margin-bottom:30px; background-color:#444; margin-left: 50%;}
 .newBox h2 {width:100%; text-align:center;margin-bottom:85px;}
 .newBox .txtBox {position:absolute; left:0; bottom:0; background-color:#f3f3f3;width:400px; height:150px; padding:20px 40px 0;}
@@ -91,9 +117,9 @@ border:1px solid #222; }
 /* youtube */
 #youtube > div {position:relative; height:0; padding-bottom:56%}
 #youtube iframe {position:absolute; left:0; right:0; top:0; z-index:10; margin-right:20px;}
-#youtube::after {content:''; display:block; position:absolute; top:50px; left:50px; margin-right:20px; width:100%; height:100%; border:1px solid #a99284}
+#youtube::after {content:''; display:block; position:absolute; top:70px; left:80px; margin-right:20px; width:90%; height:90%; border:1px solid #a99284}
 
-#vd_d {padding:330px 0;}
+#vd_d {padding:200px 0;}
 #vd_d .care {padding-top:50px;margin-left: 146px;}
 #vd_d .care h2 {margin-bottom:35px;}
 #vd_d .care .txt {margin-bottom:50px;}
@@ -101,14 +127,17 @@ border:1px solid #222; }
 
 
 /* 고객지원 */
-#cus_d {padding:250px 0;}
-#cus_d .support li { width: 200px; height: 215px; box-sizing: border-box; margin-right:145px; background-color: rgba(245,232,206,0.3);border-radius: 50%;}
+#cus_d {padding:180px 0;}
+#cus_d .support li { width: 200px; height: 200px; box-sizing: border-box; /*margin-right:145px;*/ background-color: rgba(245,232,206,0.3);/*border-radius: 50%;*/}
 #cus_d .support li a {display:flex; margin-top: 35px; flex-direction: column; align-items: center;}
 #cus_d .support li a span {margin-top:20px;}
 #cus_d .support li:last-child {margin-right: 0;}
 #cus_d .support li:first-child img {width:70px;}
 #cus_d .support li img {width:80px;}
 .cenTxt {text-align: center; margin-bottom:140px;}
+
+.customer .support li {transition:all 0.1s;}
+.customer .support li:hover {transform:scale(.9);}
 
 
 /* app store */
@@ -123,17 +152,18 @@ border:1px solid #222; }
 
 
 /* 이벤트 */
-#applay {position:relative;padding:142px 0; }
+#applay {position:relative;padding:60px 0; }
 #applay h2, #applay > p {text-align: center;}
 #applay > p {margin:50px 0;}
-#applay .how h3 {margin-left: -240px;padding-bottom: 35px;font-size: 20px;}
-.ap_d .way {background-color:#f3f3f3;padding:60px 20px;}
+#applay .how h3 {padding-bottom: 35px;font-size: 20px;}
+/* .ap_d .way {background-color:#f3f3f3;padding:60px 20px;} */
 .user_info {position:absolute;bottom:-138px; right: 300px;background-color:#5a5a5a;padding:20px;color:#fff}
-.step {display: flex;flex-direction: column; align-items: center; margin:0 75px; }
+.step {display: flex; flex-direction: column; align-items: center; /*margin:0 75px; */}
+.step1:after, .step2 :after {content:''; display:inline-block; position:absolute; right:0; top:0; height:250px; border-right:2px solid #ddd}
 .ap_how {display:flex;}
 .ap_how img {margin-top:55px;}
 
-.user_info .useSet {margin-bottom:10px;}
+/* .user_info .useSet {margin-bottom:10px;}
 
 .user_info .userName label {margin-right:130px;}
 .user_info .phonNum label{margin-right:95px;}
@@ -155,13 +185,46 @@ border:1px solid #222; }
 .agree .ag_txt {padding:10px;border:1px solid #fff; border-radius:5px;}
 .cBtn {width:100%; text-align: right; margin-top: -13px;}
 .cBtn span {text-align: right;}
-#applay button.applyBtn {background-color:#f3f3f3; padding:15px 0; color:#222; text-align: center; width: 100%; margin-top: 30px;}
+#applay button.applyBtn {background-color:#f3f3f3; padding:15px 0; color:#222; text-align: center; width: 100%; margin-top: 30px;} */
+.step3 {z-index:10}
+.left {background-color:#eee }
+.left:after {
+    content: "";
+    position:absolute;
+    top:0; right:0;
+    border-right: 128px solid #f9f9f9;
+    border-bottom: 600px solid rgba(0,0,0,0);
+    width: 0;
+    height: 0;
+}
+.right{background-color: #f9f9f9;}
+
+.a_btn {text-align: center; margin-left:50px; padding:54px 0;}
+.a_btn a {color: #fff; padding:10px 30px;border:1px solid #ddd; border-radius:12px;background-color:#bbb; }
+
+.how {margin-left:50px}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
 
 /* sns */
-.sns_r {padding:250px 0 80px;}
+/* .sns_r {padding:250px 0 80px;} */
 .sns {padding-top:100px;}
 .sns_r > p {font-size:18px;text-align: center; padding-top:30px;}
 #divConcierge .title {display: none;}
@@ -171,13 +234,11 @@ border:1px solid #222; }
 
 
 
-
-
 /* footer */
 .ft_bg .ft_txt::before {content:'';display:block;width:100%; height:1px; background-color:#222}
 .ft_bg .ft_txt::after {content:'';display:block;width:100%; height:1px; background-color:#222}
 .ft_txt .container {display:flex;}
-.ft_txt .ft_info {display:flex; width:700px; margin:auto 0;}
+.ft_txt .ft_info {display:flex; width:1000px; margin:auto 0;}
 .ft_txt .ft_info li {margin-right:50px;}
 .ft_txt .ft_info li span {color:#00a3e0;font-size: 17px;}
 .ft_txt #tnb-left { width:100%; text-align:right; }
@@ -188,12 +249,10 @@ border:1px solid #222; }
 .xi-facebook:before {content: "\ebd3"; color: #222;}
 
 .ft_under {margin-top:50px;}
-.ft_I {display: flex;}
 .ft_I h2 img {width:150px;}
-.ft_I .ft_T {width:700px; margin-left:80px;}
+.ft_I .ft_T {width:700px;}
 .ft_I .ft_T p,.ft_I .ft_T a {font-size:14px; color:#222}
 
-.ft_I .call {margin-left:90px;}
 .copy,.copy span {font-size: 13px; margin-bottom:50px;}
 
 .call .num {font-size:35px;}
