이벤트 폼 팝업 완성_0512

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -16,10 +16,11 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-logomodern-business-nav/blob/master/LICENSE)
  */
 
-
-body {
-
-}
+ .collapse.in{
+     -webkit-transition-delay: 4s;
+     transition-delay: 5s;
+     visibility: visible;
+ }
 
 
 
